assets/css/style.css
/* ------------------------------------------- Navigation List Links */

.fa-bars {
    color: #df6530;
}

#dropdownMenuButton {
    color: #df6530;
}

.nav-link {
    font-family: Montserrat, sans-serif;
    color: #df6530;
    font-size: 11pt;
    padding: 15px;
    text-align: right;
}

.a .nav-link .hover {
    color: #2a5490;
}

.active {
    color: #12a1ee;
}


/* ------------------------------------------- Home Hero Image */

.hero {
    padding-top: 100px;
    padding-bottom: 180px;
}

.container-fluid {
    padding: 0;
}


.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
    position: relative;
    padding: 0;
}


.home-hero {
    position: relative;
    padding-right: 0;
    padding-left: 0;
    margin-right: 0;
    margin-left: 0;
    max-width: 100%;
    min-width: 20%;
}



/* ------------------------------------------- Home Welcome Box */

.blue-box { 
    position: relative;
    padding: 0;
    background: #2a5490;
    margin-right: 0;
    margin-left: 0;
}

.welcome { 
    font-family: Montserrat, sans-serif;
    font-weight: 400;
    position: relative;
    line-height: 30px;
    top: 30%;
    padding-right: 10%;
    padding-left: 10%;
    text-align: center;
    color: #fff; 
}


.tips { 
    font-family: Montserrat, sans-serif;
    font-weight: 300;
    float: right;
    position: relative;
    top: 32%;
    padding-right: 15%;
    padding-left: 15%;
    padding-bottom: 35%;
    text-align: center;
    color: #fff; 
}


/* ------------------------------------------- Why Go Tennis? */

.why-header {
    font-family: Montserrat, sans-serif;
    text-align: center;
    padding-bottom: 5px;
}


.why-text {
    font-family: Montserrat, sans-serif;
    text-align: justify;
    padding-bottom: 220px;
    padding-left: 60px;
    padding-right: 60px;
    font-size: medium;
}

/* ------------------------------------------- About Us */

.about-section {
    background-color: #fafafa;
    padding-top: 100px;
  } 

.about-us {
    font-family: Montserrat, sans-serif;
    text-align: center;
    padding-left: 15px;
    padding-right: 15px;
    padding-bottom: 60px;
}

/* ------------------------------------------- About Us - How can we help you? */

  .how-we-help {
    font-family: Montserrat, sans-serif;
    text-align: justify;
    padding-bottom: 30px;
    padding-left: 15px;
    padding-right: 15px;
    padding-right: 30px;
    font-size: medium;
}

.fa-info-circle {
    color: #2a5490;
}

.help {
    color: #2a5490;
    padding-left: 15px;
    padding-right: 15px;
}


/* ------------------------------------------- About Us - Coach Adam Jameel */

.coach {
    font-family: Montserrat, sans-serif;
    text-align: justify;
    padding-bottom: 120px;
    padding-left: 15px;
    padding-right: 15px;
    padding-right: 30px;
    font-size: medium;
}

.fa-user-friends {
    color: #2a5490;
}

.adam {
    color: #2a5490;
    padding-left: 15px;
    padding-right: 15px;
}


/* ------------------------------------------- Carousel */

.carousel-text{
    text-align: center;
    padding-top: 120px;
    padding-bottom: 0;
}

.carousel-inner {
    background-color: #fff;
    padding-bottom: 25px;
}

.carousel-indicators li {
    background-color: #2a5490;
    position: relative; 
}


.fa-angle-left, .fa-angle-right {
    color:#2a5490;
    font-size: 25px;
    padding-top: 90px;
}



#carouselExampleIndicators {
    height:100%;
}


.carousel-inner {
    padding-bottom: 20px;
}



/* ------------------------------------------- Upload Text */

.submit-heading { 
    font-family: Montserrat, sans-serif;
    color: #2a5490;
    padding-top: 140px;
    padding-left: 46px;
}

p.donate {
    font-family: Montserrat, sans-serif;
    padding-top: 10px;
    padding-left: 46px;
    /*padding-right: 200px;*/
}


.fa-cc-paypal {
    color: #df6530;
    font-size: 25px;
}

.fa-cc-paypal:hover {
    color: #2a5490;
}



/* ------------------------------------------- Upload Form */


.upload-pic {
    position: absolute;
    max-width: auto;
    max-height: auto;
    padding: 0;
    z-index: -1;
}



/* taken from the Love Running Code Institute project and amended in places to match what I am expecting to see based on my designs */

.upload-form-section {
    clear: left;
    background-size: cover;
    background-position: center;
    height: 900px;
}

.upload-form {
    font-family: Montserrat, sans-serif;
    padding-top: 0;
    background-color: rgba(255, 255, 255, 0.555);
    max-width: 600px;
    position: absolute;
    left: 45px;
    padding: 30px;
    padding-bottom: 30px;
}

.text-input {
    width: 100%;
    height: 25px;
    padding: 5px 0 20px 0;
    border: 0.5px solid #000000;   
}

.text-input:hover {
    border-color: #df6530;
}

.upload-button {
    margin-top: 20px;
    margin-bottom: 20px;
    padding: 15px 32px 15px 32px;
    text-align: center;
    font-size: 100%;
    background-color: #df6530;
    border-color: #df6530;
    color: #fff;
    display: block;
}

.btn-success:hover {
    background-color: #2a5490;
    border-color: #2a5490;
    padding-top: 10px;
}

.btn-success:active {
  background-color: #df6530 !important;
  border-color: #df6530 !important;
}



/* ------------------------------------------- Contact Text */

.contact-heading { 
    font-family: Montserrat, sans-serif;
    color: #2a5490;
    padding-top: 140px;
    padding-left: 83px; 
}

p.contact {
    font-family: Montserrat, sans-serif;
    padding-top: 10px;
    padding-left: 83px;
  
    padding-bottom: 20px;
}


/* ------------------------------------------- Contact Form */

.contact-pic {
    position: absolute;
    max-width: auto;
    max-height: auto;
    padding: 0;
    z-index: -1;
}

/* taken from the Love Running Code Institute project and amended in places to match what I am expecting to see based on my designs */

.contact-form-section {
    clear: left;
    background-size: cover;
    background-position: center;
    height: 950px;
}

.contact-form {
    font-family: Montserrat, sans-serif;
    padding-top: 260px;
    background-color: rgba(255, 255, 255, 0.555);
    max-width: 100%;
    position: absolute;
    padding: 30px;
}

.text-input {
    width: 100%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 0.5px solid #000000;   
}


/* NEED TO FIX THIS PART OF THE TEST INPUT BOX

element.style {
    border: 0.5px solid #000000;
}


element.style:hover {
    border-color: #df6530;
}

*/

.text-input:hover {
    border-color: #df6530;
}

.submit-button {
    margin-top: 20px;
    margin-bottom: 20px;
    padding: 15px 32px 15px 32px;
    text-align: center;
    font-size: 100%;
    background-color: #df6530;
    border-color: #df6530;
    color: #fff;
    display: block;
}

.btn-success:hover {
    background-color: #2a5490;
    border-color: #2a5490;
}

.textarea {
    height: auto;
}


/* ------------------------------------------- Footer */

.footer {
    background-color: #2a5490;
    position: absolute;
    max-width: 100%;
    min-width: 100%;
}

.row {
    margin-left: 0;
    margin-right: 0;
}

.sponsored-by  {
    font-family: Montserrat, sans-serif;
    font-size: 14.5px;
    color: #fff;
    margin-top: 0;
    padding-top: 0px;
    padding-left: 18px;
    padding-right: 10px;
}

.babolat {
    margin-left: 18px;
}

.lta-britain {
    margin-left: 10px;
}

.follow-us {
    font-family: Montserrat, sans-serif;
    font-size: 14.5px;
    color: #fff;
    margin-top: 0;
    padding-top: 0px;
    padding-right: 10px;
    padding-left: 10px;
    text-align: center;
}

.social-media {
    font-size: 20px;
    padding-right: 16px;
    text-align: center;
}

.social-media a{
    color: #fff;
}

.social-media a:hover{
    color: #c7d7f0;
}

.supporting-p {
    font-family: Montserrat, sans-serif;
    font-size: 14.5px;
    color: #fff;
    margin-top: 0;
    padding-top: 0px;
    padding-right: 18px;
    padding-left: 10px;
    text-align: right;
}

.supporting-logos {
    padding-top: 0;
    padding-bottom: 20px;
    float: right;
    position: relative;
}

.dogs-trust {
    margin-right: 10px;
}

.chesterfield-rescue {
    margin-right: 18px;
}

div.col-md-4.col-lg-4.col-xl-4.mx-auto.mt-4.text-md-start {
    position: relative;
    max-width: 75%;
}

